<resources>
    <string name="app_name">PickingApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_config">Configuraciones</string>

    <string name="action_settings">Configuraciones</string>
    <string name="info_configuracion">A continuacion ingrese la direccion url del servicio provista por el administrador del sistema</string>
    <string name="api_url">Direccion URL</string>

    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="stock">Stock</string>
    <string name="salidas">Salidas</string>
    <string name="entradas">Entradas</string>
    <string name="grabar">Grabar</string>
    <string name="salir">Salir</string>
    <string name="ingrese_un_codigo_de_barra">Ingrese un codigo de barra</string>
    <string name="movimiento_stock">Movimiento de Stock</string>
    <string name="mov_stock">Movimiento de Stock</string>
    <string name="serial_invalido">Serial no valido</string>
    <string name="producto_agregado">Producto agregado</string>
    <string name="api_ingresarStock">/api/comprobantes/ingresar/</string>
</resources>
