<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_entradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entradas" />

    <Button
        android:id="@+id/btn_salidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salidas" />

    <Button
        android:id="@+id/btn_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion" />
</LinearLayout>